implementing the swagger
